# mir-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs  flake.nix  mirrs_trampoline.c  trampoline.c  typos.toml
.github/workflows/: ci.yaml
mir-sys/: CHANGELOG.md  Cargo.toml  build.rs
mir-sys/src/: bindings.rs  bindings_gen.rs  lib.rs
mir-sys/tests/: ffi.rs
src/: codegen.rs  interp.rs  lib.rs  mem_file.rs  tests.rs  types.rs
tests/: ffi.rs  smoke.rs
