[package]
name = "mir-rs"
version = "0.1.0"
edition = "2024"
description = "FFI bindings to MIR Project (https://github.com/vnmakarov/mir)"
keywords = ["bindings", "mir", "compiler", "jit"]
categories = ["compilers", "api-bindings"]
license = "MIT"
repository = "https://github.com/oxalica/mir-rs"
documentation = "https://docs.rs/mir-rs"
exclude = ["/mir/*-tests", "/mir/*-benchmarks"] # Keep the package small.

[lib]
name = "mir"

[dependencies]
libc = "0.2.170"
mir-sys = { path = "./mir-sys", version = "0.1" }
paste = "1.0.15"
smallvec = "1.14.0"

[build-dependencies]
cc = "1.2.16"

[workspace]

[dev-dependencies]
rstest = { version = "0.25.0", default-features = false }
