[package]
name = "mir-rs"
version = "0.1.0"
edition = "2024"
description = "FFI bindings to MIR Project (https://github.com/vnmakarov/mir)"
keywords = ["bindings", "mir", "compiler", "jit"]
categories = ["compilers", "api-bindings"]
license = "MIT"
repository = "https://github.com/oxalica/mir-rs"
documentation = "https://docs.rs/mir-rs"
exclude = ["/mir/*-tests", "/mir/*-benchmarks"] # Keep the package small.

[lib]
name = "mir"

[features]
default = ["io", "interp", "gen"]
io = ["mir-sys/io"]
interp = ["mir-sys/interp"]
gen = ["mir-sys/gen"]
gen-debug = ["gen", "mir-sys/gen-debug"]

[dependencies]
libc = "0.2.75"
mir-sys = { path = "./mir-sys", version = "0.1", default-features = false }
paste = "1"
smallvec = "1"

[build-dependencies]
cc = "1"

[workspace]

[dev-dependencies]
rstest = { version = "0.25.0", default-features = false }
