[package]
name = "mir-rs"
version = "0.1.0"
edition = "2024"
description = "FFI bindings to MIR Project (https://github.com/vnmakarov/mir)"
keywords = ["bindings", "mir", "compiler", "jit"]
categories = ["compilers", "api-bindings"]
license = "MIT"
repository = "https://github.com/oxalica/mir-rs"
documentation = "https://docs.rs/mir-rs"
exclude = ["/mir/*-tests", "/mir/*-benchmarks"] # Keep the package small.
# NB: Sync with CI.
rust-version = "1.85" # edition 2024

[package.metadata.docs.rs]
all-features = true
# Only 64-bit platforms.
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]

[lib]
name = "mir"

[features]
default = ["io", "interp", "gen"]
io = ["mir-sys/io"]
interp = ["mir-sys/interp"]
gen = ["mir-sys/gen"]
gen-debug = ["gen", "mir-sys/gen-debug"]

[dependencies]
libc = "0.2.75"
mir-sys = { path = "./mir-sys", version = "0.1", default-features = false }
paste = "1"
smallvec = "1"

[build-dependencies]
cc = "1"

[dev-dependencies]
rstest = { version = "0.25.0", default-features = false }

[workspace]

