[package]
name = "mir-sys"
version = "0.1.0+mir.0.1.1"
edition = "2024"
links = "mir"
build = "build.rs"
description = "FFI bindings to MIR Project (https://github.com/vnmakarov/mir)"
keywords = ["bindings", "mir", "compiler", "jit"]
categories = ["compilers", "external-ffi-bindings"]
license = "MIT"
repository = "https://github.com/oxalica/mir-rs"
documentation = "https://docs.rs/mir-sys"
exclude = ["/mir/*-tests", "/mir/*-benchmarks"] # Keep the package small.

[features]
default = ["bundled"]
bundled = []
__internal_generate_sys = ["dep:bindgen"]

[dependencies]
libc = "0.2.121"

[build-dependencies]
cc = "1.0.73"
bindgen = { version = "0.71.0", optional = true }
