[package]
name = "mir-sys"
version = "0.1.0+mir.0.1.1"
edition = "2024"
links = "mir"
build = "build.rs"
description = "FFI bindings to MIR Project (https://github.com/vnmakarov/mir)"
keywords = ["bindings", "mir", "compiler", "jit"]
categories = ["compilers", "external-ffi-bindings"]
license = "MIT"
repository = "https://github.com/oxalica/mir-rs"
documentation = "https://docs.rs/mir-sys"
exclude = ["/mir/*-tests", "/mir/*-benchmarks"] # Keep the package small.

[features]
default = ["io", "scan", "interp", "gen"]
io = []
scan = []
interp = []
gen = []
assert = []
gen-debug = ["gen"]

__internal_generate_sys = ["dep:bindgen", "io", "scan", "interp", "gen", "gen-debug"]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0.83"
bindgen = { version = "0.71", optional = true }

[dev-dependencies]
expect-test = "1"
