[package]
name = "mir-sys"
version = "0.2.0"
edition = "2024"
links = "mir"
build = "build.rs"
description = "FFI bindings to MIR Project (https://github.com/vnmakarov/mir)"
keywords = ["bindings", "mir", "compiler", "jit"]
categories = ["compilers", "external-ffi-bindings"]
license = "MIT"
repository = "https://github.com/oxalica/mir-rs"
documentation = "https://docs.rs/mir-sys"
include = ["build.rs", "src", "tests", "mir/*.h", "mir/*.c"]
# NB: Sync with CI.
rust-version = "1.85" # edition 2024

[package.metadata.docs.rs]
features = ["default", "gen-debug"]
# Only 64-bit platforms.
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]

[features]
default = ["io", "scan", "interp", "gen"]
io = []
scan = []
interp = []
gen = []
assert = []
gen-debug = ["gen"]

__internal_generate_sys = ["dep:bindgen", "io", "scan", "interp", "gen", "gen-debug"]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0.83"
bindgen = { version = "0.71", optional = true }

[dev-dependencies]
expect-test = "1"
